# krogetter

./: .dockerignore  .env.example  .gitignore  .ignore  Dockerfile  LICENSE  README.md  docker-compose.yml  hacs.json  pyproject.toml
.github/workflows/: build-docker.yml  validate.yml
custom_components/krogetter/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/krogetter/translations/: en.json
examples/: tracked_items.example.json
src/krogetter/: __init__.py  __main__.py  cli.py  config.py  detector.py  logging_setup.py  models.py  storage.py  tracker.py  url.py
src/krogetter/api/: __init__.py  kroger_web.py
src/krogetter/server/: __init__.py  app.py  schemas.py
tests/: initial_state.json  product_data.json  test_api_web.py  test_cli.py  test_config.py  test_detector.py  test_models.py  test_server.py  test_storage.py  test_tracker.py  test_url.py
