[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "krogetter"
version = "0.1.0"
description = "Track sale prices on Kroger family store websites."
requires-python = ">=3.11"
dependencies = [
    "invisible-playwright @ git+https://github.com/feder-cr/invisible_playwright.git",
    "playwright>=1.40,<1.61",
    "click>=8.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-vcr>=1.0",
    "vcrpy>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27.0",
]

[project.scripts]
krogetter = "krogetter.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
